--- a/login.html
+++ b/login.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录/注册</title>
+    <!-- 导入layui的css样式 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <!-- 导入字体图标样式 -->
+    <link rel="stylesheet" href="/assets/fonts/iconfont.css">
+    <!-- 导入自己的css样式 -->
+    <link rel="stylesheet" href="/assets/css/login.css">
 </head>
+
 <body>
-    
+    <!-- 头部区域 -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="">
+    </div>
+    <!-- 登录注册区域 -->
+    <div class="theLogin">
+        <!-- 登录图片 -->
+        <div class="title-box"></div>
+        <!-- 登陆区域 -->
+        <div class="login-box">
+            <!-- 登录表单 -->
+            <form class="layui-form" id="form-box">
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal btnList" lay-submit>登录</button>
+
+                </div>
+            </form>
+            <div class="layui-form-item">
+                <a href="javascript:;" class="link-login">去注册账号</a>
+            </div>
+
+        </div>
+        <!-- 注册的表单 -->
+        <div class="reg-box">
+            <!-- 登录表单 -->
+            <form class="layui-form" id="form-reg">
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 再次确认密码框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|rePwd"
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+
+                </div>
+            </form>
+            <div class="layui-form-item">
+                <a href="javascript:;" class="link-reg">去登陆</a>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <!-- 引入layui的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入jquery js文件 -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 引入自己的bassAPI文件 -->
+    <script src="/assets/js/bassAPI.js"></script>
+    <!-- 引入自己的js文件 -->
+    <script src="/assets/js/login.js"></script>
 </body>
+
 </html>
